--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Link Shortener</title>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 </head>
-<style>
-  #main-card {
-      margin:0 auto;
-      display: flex;
-      width: 50em;
-      align-items: center;
-  }
-</style>
-<body class="mdc-typography">
-<div id="main-card">
-    {% if user.is_authenticated %}
-    <p>Hi {{ user.username }}!</p>
-    <p><a href="{% url 'logout' %}">Log out</a></p>
-    {% else %}
-    <p>You are not logged in.</p>
-    <a href="{% url 'login' %}">Log In</a>
-    {% endif %}
+<header>
+    <div id="main-card">
+        {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}!</p>
+        <p><a href="{% url 'logout' %}">Log out</a></p>
+        {% else %}
+        <p>You are not logged in.</p>
+        <form class="form-inline ml-auto">
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary">
+                Log in</a>
+            <a href="{% url 'signup' %}" class="btn btn-primary ml-2">
+                Sign up</a>
+        </form>
+        {% endif %}
+    </div>
+</header>
+<div class="container-fluid">
     {% block content %}
-    {% endblock %}
+    {% endblock content %}
 </div>
-</body>
 </html>
